--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         android:theme="@style/Theme.HandleAPI">
         <activity
             android:name=".SplashActivity"
+            android:theme="@style/Theme.AppCompat.NoActionBar."
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
